@@ -1,7 +1,8 @@
 /**
  *  @file
  *
- *  CUnit testing framework for libapol.
+ *  Declarations for libapol infomation flow analysis tests, both
+ *  direct and transitive.
  *
  *  @author Jeremy A. Mowery jmowery@tresys.com
  *  @author Jason Tang jtang@tresys.com
@@ -23,41 +24,13 @@
  *  Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
  */
 
-#include <config.h>
+#ifndef INFOFLOW_TESTS_H
+#define INFOFLOW_TESTS_H
 
 #include <CUnit/CUnit.h>
-#include <CUnit/Basic.h>
 
-#include "avrule-tests.h"
-#include "dta-tests.h"
-#include "infoflow-tests.h"
-#include "policy-21-tests.h"
-#include "terule-tests.h"
+extern CU_TestInfo infoflow_tests[];
+extern int infoflow_init();
+extern int infoflow_cleanup();
 
-int main(void)
-{
-	if (CU_initialize_registry() != CUE_SUCCESS) {
-		return CU_get_error();
-	}
-
-	CU_SuiteInfo suites[] = {
-		{"Policy Version 21", policy_21_init, policy_21_cleanup, policy_21_tests}
-		,
-		{"AV Rule Query", avrule_init, avrule_cleanup, avrule_tests}
-		,
-		{"Domain Transition Analysis", dta_init, dta_cleanup, dta_tests}
-		,
-		{"Infoflow Analysis", infoflow_init, infoflow_cleanup, infoflow_tests}
-		,
-		{"TE Rule Query", terule_init, terule_cleanup, terule_tests}
-		,
-		CU_SUITE_INFO_NULL
-	};
-
-	CU_register_suites(suites);
-	CU_basic_set_mode(CU_BRM_VERBOSE);
-	CU_basic_run_tests();
-	unsigned int num_failures = CU_get_number_of_failure_records();
-	CU_cleanup_registry();
-	return (int)num_failures;
-}
+#endif
