@@ -1,3 +1,8 @@
+2007-08-20  J. Tang  <jtang@tresys.com>
+
+	* Fixed memory leak in libapol/infoflow analysis, where edges were
+	not being freed.  Thanks to Ben Martin for spotting this error.
+
 2007-08-16  J. Tang  <jtang@tresys.com>
 
 	* Fixed an error in libapol's infoflow.  When performing a
@@ -34,7 +39,7 @@
 2007-08-02  J. Mowery  <jmowery@tresys.com>
 
 	* Split the flags for sesearch to allow searching each type
-	  of terule separately (i.e. type_transition, type_member, 
+	  of terule separately (i.e. type_transition, type_member,
 	  type_change). These flags are now identical to those used by
 	  sediff.
 
